Move to CoffeeScript source

--- a/package.json
+++ b/package.json
@@ -21,13 +21,15 @@
     "url": "https://github.com/newtonjs/event.git"
   },
 
-  "main": "./src/event.js",
+  "main": "./lib/event.js",
   "scripts": {
-    "test": "./node_modules/.bin/mocha --ui tdd --reporter spec test"
+    "test": "./node_modules/.bin/mocha --compilers coffee:coffee-script --ui tdd --reporter spec test",
+    "compile": "./node_modules/.bin/coffee -co lib src"
   },
 
   "devDependencies": {
     "chai": "1.4.x",
+    "coffee-script": "1.4.x",
     "mocha": "1.8.x",
     "sinon": "1.5.x"
   }
